--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A Node.Js library for using Printful's API.",
   "main": "index.js",
   "scripts": {
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/JoelDesante/Printfully/issues"
   },
-  "homepage": "https://github.com/JoelDesante/Printfully#readme"
+  "homepage": "https://github.com/JoelDesante/Printfully#readme",
+  "devDependencies": {
+    "typescript": "4.1.2"
+  }
 }
