--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,11 @@
   },
   "homepage": "https://github.com/JoelDesante/Printfully#readme",
   "devDependencies": {
+    "@types/jest": "26.0.15",
+    "@types/node": "14.14.10",
+    "jest": "26.6.3",
+    "ts-jest": "26.4.4",
+    "ts-node": "9.0.0",
     "typescript": "4.1.2"
   }
 }
