--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "test": "npx jest"
+    "test": "npx jest",
+    "docs": "npx documentation build index.ts --parse-extension ts -f html -o docs"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/jest": "26.0.15",
     "@types/node": "14.14.10",
+    "documentation": "13.1.0",
     "jest": "26.6.3",
     "ts-jest": "26.4.4",
     "ts-node": "9.0.0",
