--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "printfully",
-  "version": "0.0.0",
+  "version": "0.1.0-0",
   "description": "A Node.Js library for using Printful's API.",
   "main": "index.js",
   "scripts": {
