--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "printfully",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A Node.Js library for using Printful's API.",
   "main": "index.js",
   "scripts": {
@@ -32,5 +32,8 @@
     "ts-jest": "26.4.4",
     "ts-node": "9.0.0",
     "typescript": "4.1.2"
+  },
+  "dependencies": {
+    "got": "11.8.0"
   }
 }
