--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "printfully",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "A Node.Js library for using Printful's API.",
-  "main": "index.js",
+  "main": "/dist/lib/Printfully.js",
   "scripts": {
     "build": "npx tsc",
     "test": "npx jest",
-    "docs": "npx documentation build lib/** --parse-extension ts -f html -o docs"
+    "docs": "npx documentation build lib/** --parse-extension ts -f html -o docs",
+    "prepare" : "npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,12 +19,13 @@
     "Wrapper",
     "Promise"
   ],
+  "files": ["lib/**/*"],
   "author": "Joel DeSante",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/JoelDesante/Printfully/issues"
   },
-  "homepage": "https://github.com/JoelDesante/Printfully#readme",
+  "homepage": "https://printfully.yooogle.co",
   "devDependencies": {
     "@types/jest": "26.0.15",
     "@types/node": "14.14.10",
